--- a/MyShop/MyShop.Core/MyShop.Core.csproj
+++ b/MyShop/MyShop.Core/MyShop.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Basket.cs" />
     <Compile Include="Models\BasketItem.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\Product.cs" />
